--- a/admin-backstage/admin-backstage-dev.yml
+++ b/admin-backstage/admin-backstage-dev.yml
@@ -224,7 +224,7 @@ logging:
 
 
 
-referCacheurl:  192.168.0.152:9099/pyq/sn
+referCacheurl:  192.168.0.152:9099/pyq/sn/gggg
 management:
   endpoints:
     web:
